<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="fill_parent"
              android:layout_height="match_parent"
              style="@style/background">

    <ImageView
            android:background="@drawable/todo"
            android:layout_centerHorizontal="true"
            android:layout_width="300dp"
            android:layout_height="148dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:id="@+id/todo"
            android:gravity="center"/>

    <TableLayout android:orientation="horizontal"
                 android:layout_below="@id/todo"
                 android:layout_centerHorizontal="true"
                 android:stretchColumns="1"
                 android:layout_width="fill_parent"
                 android:layout_margin="15dp"
                 android:layout_height="wrap_content">

        <TableRow
                android:layout_margin="5dp">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      style="@style/textViewStyle"
                      android:text="@string/title" />
            <EditText android:id="@+id/title"
                      style="@style/editTextStyle"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"/>

        </TableRow>

        <TableRow
                android:layout_margin="5dp">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      style="@style/textViewStyle"
                      android:text="@string/priority" />
            <Spinner
                    android:id="@+id/priority"
                    style="@style/spinnerForm"
                    android:entries="@array/priority"
                    />


        </TableRow>

        <TableRow
                android:layout_margin="5dp">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      style="@style/textViewStyle"
                      android:text="@string/body" />
            <EditText android:id="@+id/body" android:layout_width="match_parent"
                      android:layout_height="150dp"
                      android:gravity="top|left"
                      style="@style/editTextStyle"
                      android:scrollbars="vertical"
                      android:layout_weight="1"/>

        </TableRow>

        <TableRow
                android:gravity="center">
            <Button android:id="@+id/confirm"
                    android:text="@string/confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/editTextStyle"
                    android:gravity="center_horizontal"/>
        </TableRow>

    </TableLayout>
</LinearLayout>